--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
+        "rap2hpoutre/laravel-log-viewer": "^2.2",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
